# QR-Code-Generator

./: README.md  main.py  pyproject.toml
project_setup_files/: cover_image.url  icon.url
