[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.11"
numpy = "^1.22.2"
replit = "^3.2.4"
Flask = "^2.2.0"
urllib3 = "^1.26.12"
qrcode = "^7.4.2"
Pillow = "^9.4.0"
PySimpleGUI = "^4.60.4"
PyQRCode = "^1.2.1"
pypng = "^0.20220715.0"
climage = "^0.1.3"
colored = "^1.4.4"
colorama = "^0.4.6"
ansi = "^0.3.6"
Js2Py = "^0.74"

[tool.poetry.dev-dependencies]
debugpy = "^1.6.2"
replit-python-lsp-server = {extras = ["yapf", "rope", "pyflakes"], version = "^1.5.9"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"